# globus-toolkit

./: Doxyfile  configure.ac  libtool  ltdlconfig.h  makefile.targets
callout/source/: globus-callout-uninstalled.pc  globus-callout.pc  libtool
common/source/: globus-common-uninstalled.pc  globus-common.pc  globus-thread-pthread-uninstalled.pc  globus_i_common_config.h  libtool
doxygen/: index.dox
gridftp/net_manager/: Doxyfile  globus-net-manager-uninstalled.pc  globus-net-manager.pc  libtool  version.h
gsi/gridmap_eppn_callout/: Makefile.am  globus-gridmap-eppn-callout.pc  globus_gridmap_ldap_connect.c  libtool  version.h
gsi/gridmap_ldap_callout/: Makefile.am  configure.ac  globus-gridmap-ldap-callout-uninstalled.pc.in  globus-gridmap-ldap-callout.pc  globus_gridmap_ldap_callout.c  globus_gridmap_ldap_callout.lo  gridmap_ldap_callout-gsi_authz.conf  libglobus_gridmap_ldap_callout.la  libtool  version.h
gsi/gridmap_ldap_connect/: Makefile.am  configure.ac  globus-gridmap-ldap_callout-uninstalled.pc.in  globus-gridmap-ldap_callout.pc.in  globus-gridmap-ldap_connect-uninstalled.pc  globus-gridmap-ldap_connect.pc  globus_gridmap_ldap_connect.c  globus_gridmap_ldap_connect.lo  gridmap_ldap_connect-gsi_authz.conf  libglobus_gridmap_ldap_connect.la  libtool
gsi/gridmap_ldap_connect/.libs/: libglobus_gridmap_ldap_connect.la
gsi/gridmap_verify_myproxy_callout/: globus-gridmap-verify-myproxy-callout-uninstalled.pc  libtool  version.h
io/compat/: globus-io-uninstalled.pc  globus-io.pc  libtool  version.h
osx/: GT_PKG_LIST_SH  create-packages
(+397 files in other folders)
